# layered-nlp

./: .gitignore  Cargo.toml  README.md  design.ts
examples/: Cargo.toml
examples/examples/: position_of_speech.rs  tests.rs
layered-amount/: Cargo.toml
layered-amount/src/: amounts.rs  lib.rs
layered-amount/src/tests/: amounts.rs
layered-clauses/: Cargo.toml
layered-clauses/src/: clause_keyword.rs  clauses.rs  lib.rs
layered-clauses/src/tests/: clauses.rs
layered-part-of-speech/: Cargo.toml  README.md  build.rs
layered-part-of-speech/src/: lib.rs
src/: create_tokens.rs  lib.rs  ll_line.rs  nlp_token_graph.rs  resolvers.rs  tests.rs  type_bucket.rs  type_id_to_many.rs
src/_archive/03/: lib-forwards.rs  lib.rs  nlp_token_graph.rs
src/_archive/LLCursor/: cursor_group.rs  experiment_match_query_builder.rs  experiment_match_tuple.rs  ll_line_ll_cursor.rs  matcher.rs  x_finder.rs
src/create_tokens/: get_word_tag.rs
src/ll_line/: as_tokens.rs  display.rs  finish_with.rs  ll_selection.rs  x.rs
src/ll_line/x/: all.rs  any_of.rs  attr.rs  attr_eq.rs  functions.rs  seq.rs  token_has_any.rs  token_text.rs
src/nlp_token_graph/: p_tokens.rs
src/nlp_token_graph/p_tokens/: p_token.rs
src/resolvers/: text_match.rs
src/tests/: clauses.rs  currency_amount.rs  ll_selection.rs  tokenizing.rs
src/tests/snapshots/: layered_nlp__tests__currency_amount__it_works_yen.snap
