[package]
authors = [
  "Cole Lawrence <cole@colelawrence.com>",
  "Dylan Ancel (leudz) <dylan.ancel@gmail.com>",
]
edition = "2018"
name = "layered-nlp"
version = "0.1.0"

[workspace]
members = ["examples", "layered-part-of-speech", "layered-clauses"]

[dependencies]
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
once_cell = "1.7.2"
regex = "1.4.5"

[dev-dependencies]
insta = "1.7.1"
rust_decimal = {version = "1.10.3", default-features = false, features = ["std"]}
