[package]
name = "layered-examples"
version = "0.1.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
layered-nlp = { path = ".." }
insta = "1.7.0"
layered-part-of-speech = { path = "../layered-part-of-speech" }
