# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Create "v0.1.x" git tag

[package]
name = "layered-clauses"
version = "0.1.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"

[dependencies]
layered-nlp = { path = "..", version = "0.1", default-features = false }

[dev-dependencies]
insta = "1.7.1"
layered-part-of-speech = { path = "../layered-part-of-speech" }
