# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Create "v0.1.x" git tag

[package]
name = "layered-clauses"
version = "0.1.0"
authors = [
  "Dylan Ancel (leudz) <dylan.ancel@gmail.com>",
  "Story.ai Team <team@story.ai>",
]
edition = "2018"
description = "Clauses plugin for layered-nlp"
license = "MIT OR Apache-2.0"
categories = [
    "text-processing",
    "parsing",
    "wasm",
]
keywords = ["layered-nlp", "nlp", "tokens", "framework", "grammar", "wasm"]

[dependencies]
layered-nlp = { path = "..", version = "0.1", default-features = false }

[dev-dependencies]
insta = "1.7.1"
layered-part-of-speech = { path = "../layered-part-of-speech" }
