# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Create "v0.1.x" git tag

[package]
name = "layered-part-of-speech"
version = "0.1.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"

[dependencies]
layered-nlp = { path = "..", version = "0.1", default-features = false }
wiktionary-part-of-speech-extract = "0.1"
