# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Create "v0.1.x" git tag

[package]
name = "layered-part-of-speech"
version = "0.1.1"
authors = [
  "Dylan Ancel (leudz) <dylan.ancel@gmail.com>",
  "Story.ai Team <team@story.ai>",
]
edition = "2018"
description = "Part of speech plugin for layered-nlp"
repository = "https://github.com/storyscript/layered-nlp"
homepage = "https://github.com/storyscript/layered-nlp"
license = "MIT OR Apache-2.0"
categories = [
    "text-processing",
    "parsing",
    "wasm",
]
keywords = ["layered-nlp", "nlp", "tokens", "grammar", "wasm"]


[dependencies]
layered-nlp = { path = "..", version = "0.1", default-features = false }
wiktionary-part-of-speech-extract = "^0.1.2"
